# rendering

./: .gitignore  CMakeLists.txt  main.cpp  objhandler.h  tgaimage.h
no_lib/: CMakeLists.txt  main.cpp  obj_handler.cc  obj_handler.h  objhandler.h  renderer.cc  renderer.h  tga_image.cc  tga_image.h  tgaimage.h
